# gurk-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  client.db  cliff.toml  flake.nix  sqlx-data.json  test.sqlite
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: ci.yaml  publish.yml
.sqlx/: query-04f9e7b902f986bf35bd0bd2bf45e9fc1f26544b380aca4e2fc756913a0ab286.json  query-07d206dba310ff81c5b44769e9863bc4b4d4af71c23105f9aec2ca83d9f32db5.json  query-08cb4774c98769ec01b71e05824b9388c697a6ad39125ced78295b90bfc2d523.json  query-109385aec54407fcbf6be8f4d7a60e65ef8984a998d666d3a38dcb3f84aca87f.json  query-1165040a89d11912f920185aa736b60cb4ab5a44dda8285e0beff6ff8a41eb7e.json  query-1b6fc3cd9b2c351443f980ab3212bfce367a7cfc86201ddf11e25f18a9c8cdb2.json  query-1efb494f215344531efae0cf79dacf60f3d8f9a8355182e890115715d411d505.json  query-234d1525bc9a0646e4ab3f79e7edbe5f74fff34c57b2a0ba165fbac575f600e2.json  query-2bc76ef53084496ad0751b92391b0cfea8098a9c509887d20a0706bd2f339ead.json  query-2e29a510d084df7db649c02a7b1a335b9690b70c640a7820c298559c9b007f28.json  query-2eb664ee875b21a486f9af0b87f4b4bad5e0dbece666221995248667174f1e76.json  query-34a4598cecb8a8e75e26dfbb7f4e0c4975bbb8e874da18238107cb442d3424ca.json  query-378472d9cd2d440bdd6abefd078e69b5c66c22e8d686f3d93a7571ebdc1da300.json  query-381cd1427c2263024487e0cfe25d3c48ca0746fa4df009611eeb5bcd543047fe.json  query-3be1e43f26375838cc44c96b93337e00c0c5da86af32c5894a41a40158e4210b.json  query-4678c5df07cbc752bca35e8a80c9f2f7b78bbcbb95da108ed8d112487ef3a297.json  query-4715b8b07bff7e9eabe76a6b5513c400ffd4869b1b8029ba68edf0da1ff91a1f.json  query-4c48bb7a6f895153863b665e793efd8f21fba03c7daa71879269f4bc98c7f9e3.json  query-50b00bd9611b7438b12bcc01f8328ea9e475eb964a1170829a30081a18a29b84.json  query-52216c01ebb6cb9bd01ea185318cdd75aa63576407a74cc6b4ea13b03f1a8a5a.json  query-54d6d484a6a04660b949ada8790976a7891870243df5d33c867abf495b07962f.json  query-5621f642906160cc832a2d158718810230cf12761c28c48a1abdf74e49fbf042.json  query-567c465caa0c131d8c3fc20ba5e9081bceb87591c5ddca40d208d3a03fb290b8.json  query-5ebb29242cbcbdd94cb29158dd9648fbbfb3dd9959c6bbb25b040c97144789ea.json  query-6b840f0eb971e19e45726b9e3fd1be08acc54f19db63fd7f0404e0dc5c50f4be.json  query-6d5d549e04f958f194c3c13fb6a974e2c33824667c9a6fe9370456d659798b34.json  query-82fc022903e1fb0bfb50722a40e7e888d7dee9777a5331cbbb6cac743f416e17.json  query-83e4861e58ddd30df8ff96d9152aa25e2788148b8f152eed2c882fed24ef997a.json  query-909a13dc1bcb0ef5f7d7b2a6cb92c88fd285a20c5c23a360a8bba9e5b18096b7.json  query-91d45ef1f3eed83def5241fa027573bc217fad6419b52bcad53b899de7fe6cf4.json  query-9315d74c3c5f63fb9206e1c2c3f63dd9b7f41302cc0d3435e647665b64112bcd.json  query-957a0c7bc6b44cec4d492bb356ce49d32f752cd6f443f1cbb2416bfd09393985.json  query-9b62b50f6f4eb02d5bc12464f7908980e7ceb2ecdb045a0b6534b1a04cf0f6c0.json  query-a0c94eee2d58cfe789a13cd50482d5bf0fa7b9ee6891fabde769defb9f6e38d3.json  query-a1a737371687f60cd621a7b98595800311558c2e3348569360be83898e8fc8e6.json  query-a88ae3a5fcf95d51012882212b5a9ca20aace2261befc099e641b8d0ba692b29.json  query-ab5ae0e69a9fc5167e08e7b328adefb50b96d40a77d5d4277b31e21f2e572d5a.json  query-ab8ef2978d3c2ae1da379383555d3acf894f368d8fafe70e49dab829e6fe7812.json  query-b7bacc9256317c39f23ed805754917a6c50e61a2b17e6983f330c339cb23d442.json  query-b81e497db13af71b0d2f1a10a48227e3d4947ea44d43358b364fec824551eb91.json  (+4 more)
benches/: app.rs
migrations/: 001_init.sql  002_edits.down.sql  002_edits.up.sql  003_channel_mute.down.sql  003_channel_mute.up.sql  004_delete.down.sql  004_delete.up.sql  005_disappearing_messages.down.sql  005_disappearing_messages.up.sql
rsc/: welcome-art
src/: account.rs  app.rs  appdata.rs  backoff.rs  channels.rs  command.rs  config.rs  cursor.rs  data.rs  dev.rs  emoji.rs  event.rs  handlers.rs  input.rs  jami.rs  lib.rs  main.rs  model.rs  onboarding.rs  passphrase.rs  receipt.rs  shortcuts.rs  signal.rs  storage.rs  storage2.rs  ui.rs  util.rs
src/app/: channel.rs  input.rs  message.rs  mod.rs
src/config/: theme.rs
src/jami/: mod.rs  profile.rs  profilemanager.rs  transfermanager.rs
src/signal/: attachment.rs  impl.rs  local_pool.rs  manager.rs  mod.rs  test.rs
src/snapshots/: gurk__storage2__tests__json_storage_data_model.snap
src/storage/: copy.rs  forgetful.rs  json.rs  memcache.rs  mod.rs  storage.rs
src/storage/migrations/: 001_init.sql
src/storage/snapshots/: gurk__storage__json__tests__json_storage_data_model.snap
src/storage/sql/: encoding.rs  encrypt.rs  mod.rs  storage.rs  util.rs
src/storage2/: json.rs  memcache.rs  mod.rs  storage.rs  test.rs
src/storage2/snapshots/: gurk__storage2__json__tests__json_storage_data_model.snap
src/ui/: coords.rs  draw.rs  message_items_builder.rs  mod.rs  name_resolver.rs
xtask/: Cargo.toml
xtask/src/: changelog.rs  dist.rs  flags.rs  main.rs
