[package]
name = "gurk"
description = "Signal messenger client for terminal"
version = "0.5.3-dev"
authors = ["boxdot <d@zerovolt.org>"]
edition = "2021"
keywords = ["signal", "tui"]
repository = "https://github.com/boxdot/gurk-rs"
license = "AGPL-3.0-only"
categories = ["command-line-utilities"]
resolver = "2"

[workspace]
members = ["xtask"]

[profile.dev.package.miniz_oxide]
# This speeds up `cargo xtask dist`.
opt-level = 3

[profile.release]
debug = 0
lto = "thin"

[profile.bench]
debug = true

[features]
dev = ["prost", "base64"]

[dependencies]
presage = { git = "https://github.com/whisperfish/presage", rev = "464626aa27829bc4d641086359afccdb0da4711f" }
presage-store-sled = { git = "https://github.com/whisperfish/presage", rev = "464626aa27829bc4d641086359afccdb0da4711f" }

# dev feature dependencies
prost = { version = "0.13.0", optional = true }
base64 = { version = "0.22.0", optional = true }

aho-corasick = "1.0.0"
anyhow = "1.0.66"
arboard = { version = "3.2.0", features = ["wayland-data-control"] }
async-trait = "0.1.58"
chrono = { version = "0.4.22", default-features = false, features = ["serde"] }
clap = { version = "4.0.19", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
dirs = "5.0.0"
emojis = "0.6.1"
futures-channel = "0.3.25"
hex = "0.4.3"
hostname = "0.4.0"
image = { version = "0.25.0", default-features = false, features = ["png"] }
itertools = "0.13.0"
libsqlite3-sys = { version = "0.30.1", features = ["bundled-sqlcipher-vendored-openssl"] }
log-panics = "2.1.0"
mime_guess = "2.0.4"
notify-rust = "4.5.10"
once_cell = "1.18.0"
opener = "0.7.0"
phonenumber = "0.3.6"
postcard = { version = "1.0.4", features = ["alloc"] }
qr2term = "0.3.1"
ratatui = "0.28.1"
rayon = "1.7.0"
regex = "1.9.5"
scopeguard = "1.1.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
sqlx = { version = "0.8.1", features = ["sqlite", "runtime-tokio-rustls", "uuid", "chrono"] }
textwrap = "0.16.0"
thiserror = "1.0.40"
thread_local = "1.1.7"
tokio = { version = "1.21.2", default-features = false, features = ["rt-multi-thread", "macros", "net", "time"] }
tokio-stream = "0.1.11"
toml = "0.8.0"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
unicode-width = "0.1.10"
uuid = { version = "1.2", features = ["v4"] }
whoami = "1.2.3"
url = "2.5.0"
tempfile = "3.3.0"
crokey = "1.1.0"
strum_macros = "0.26.4"
strum = { version = "0.26.3", features = ["derive"] }

[package.metadata.cargo-machete]
# not used directly; brings sqlcipher capabilities to sqlite
ignored = ["libsqlite3-sys"]

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
hex-literal = "0.4.1"
insta = { version = "1.21.0", features = ["json"] }
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[[bench]]
name = "app"
harness = false

# [patch."https://github.com/whisperfish/presage.git"]
# presage = { path = "../presage/presage" }
# presage-store-sled = { path = "../presage/presage-store-sled" }
#
# [patch."https://github.com/whisperfish/libsignal-service-rs"]
# libsignal-service = { path = "../libsignal-service-rs/libsignal-service" }
# libsignal-service-hyper = { path = "../libsignal-service-rs/libsignal-service-hyper" }

[patch.crates-io]
# signal-protocol uses a fork of this library via the patch mechanism of cargo.
# Since it is not transitive, we have to add the patch here explicitly.
"curve25519-dalek" = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.3' }
# upgrade crossterm 0.27 -> 0.28 #34
# <https://github.com/timvisee/qr2term-rs/pull/34/files>
"qr2term" = { git = "https://github.com/boxdot/qr2term-rs", rev = "e69db9e" }
