[package]
name = "gurk"
description = "Signal messenger client for terminal"
version = "0.6.3"
authors = ["boxdot <d@zerovolt.org>"]
edition = "2024"
keywords = ["signal", "tui"]
repository = "https://github.com/boxdot/gurk-rs"
license = "AGPL-3.0-only"
categories = ["command-line-utilities"]
resolver = "2"

[workspace]
members = ["xtask"]

[profile.dev.package.miniz_oxide]
# This speeds up `cargo xtask dist`.
opt-level = 3

[profile.release]
debug = 0
lto = "thin"

[profile.bench]
debug = true

[features]
dev = ["prost", "base64"]

[dependencies]
presage = { git = "https://github.com/whisperfish/presage", rev = "473c70d" }
presage-store-sled = { git = "https://github.com/whisperfish/presage", rev = "473c70d" }

# dev feature dependencies
prost = { version = "0.13.4", optional = true }
base64 = { version = "0.22.1", optional = true }

aho-corasick = "1.1.3"
anyhow = "1.0.94"
arboard = { version = "3.4.1", features = ["wayland-data-control"] }
async-trait = "0.1.83"
chrono = { version = "0.4.39", default-features = false, features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
dirs = "5.0.1"
emojis = "0.6.4"
futures-channel = "0.3.31"
hex = "0.4.3"
hostname = "0.4.0"
image = { version = "0.25.5", default-features = false, features = ["png"] }
itertools = "0.13.0"
libsqlite3-sys = { version = "0.30.1", features = [
    "bundled-sqlcipher-vendored-openssl",
] }
log-panics = "2.1.0"
mime_guess = "2.0.5"
notify-rust = "4.11.3"
once_cell = "1.20.2"
opener = "0.7.2"
phonenumber = "0.3.6"
postcard = { version = "1.1.1", features = ["alloc"] }
qr2term = "0.3.3"
ratatui = "0.29.0"
regex = "1.11.1"
scopeguard = "1.2.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.8.2", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
] }
textwrap = "0.16.1"
thiserror = "2.0.9"
tokio = { version = "1.42.0", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "net",
    "time",
] }
tokio-stream = "0.1.17"
toml = "0.8.19"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
unicode-width = "0.2.0"
uuid = { version = "1.11", features = ["v4"] }
whoami = "1.5.2"
url = "2.5.4"
tempfile = "3.14.0"
crokey = "1.1.0"
strum_macros = "0.26.4"
strum = { version = "0.26.3", features = ["derive"] }
tokio-util = { version = "0.7.13", features = ["rt"] }
qrcode = { version = "0.14.1", default-features = false, features = ["image"] }
sha2 = "0.10.8"

[package.metadata.cargo-machete]
# not used directly; brings sqlcipher capabilities to sqlite
ignored = ["libsqlite3-sys"]

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
hex-literal = "0.4.1"
insta = { version = "1.41.1", features = ["json"] }
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[[bench]]
name = "app"
harness = false

# [patch."https://github.com/whisperfish/presage.git"]
# presage = { path = "../presage/presage" }
# presage-store-sled = { path = "../presage/presage-store-sled" }
#
# [patch."https://github.com/whisperfish/libsignal-service-rs"]
# libsignal-service = { path = "../libsignal-service-rs/libsignal-service" }
# libsignal-service-hyper = { path = "../libsignal-service-rs/libsignal-service-hyper" }

[patch.crates-io]
# signal-protocol uses a fork of this library via the patch mechanism of cargo.
# Since it is not transitive, we have to add the patch here explicitly.
"curve25519-dalek" = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.3' }
